--- a/src/Home.css
+++ b/src/Home.css
@@ -145,7 +145,7 @@ ul li a {
 
 .about-left p {
    margin: 2rem 0;
-   font-family: "";
+   font-family: "Montserrat";
    font-size: 1.5rem;
    font-weight: 500;
    line-height: 2rem;
@@ -177,6 +177,75 @@ ul li a {
    left: 0;
    z-index: -1;
    width: 20%;
+}
+
+
+/* Facilities */
+
+.facilities-container {
+   margin-top: 20rem;
+   display: grid;
+   place-items: center;
+   gap: 6rem;
+   text-align: center;
+}
+
+.work-left {
+   width: 50%;
+   padding: 5rem;
+   justify-content: center;
+}
+
+.work-left h2{
+   color: #4C4C4C;
+   font-family: "Montserrat";
+   font-size: 3rem;
+   font-weight: 700;
+   line-height: 4.5rem;
+   letter-spacing: 0em;
+   margin-top: 1rem;
+}
+
+.work-left p,
+.work-right p{
+   margin: 2rem 0;
+   font-family: "Montserrat";
+   font-size: 1.5rem;
+   font-weight: 500;
+   line-height: 2rem;
+   letter-spacing: 0em;
+   text-align: center;
+   color:#828282;
+}
+
+.work-right {
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
+   gap: 3rem;
+}
+
+.work-right .card {
+   background: #fff;
+   margin: 2rem 0;
+   text-align: center;
+   padding: 2.5rem;
+   box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
+}
+
+.card span {
+   font-size: 4rem;
+   color: #FE9E0D;
+}
+.card h4 {
+  margin: 1rem 0;
+  font-size: 1.5rem;
+  font-weight: 500;
+  font-family: "Montserrat";
+}
+
+.card p {
+  font-size: 1.2rem;
+  text-align: center;
 }
 
 
