--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
   text-decoration: none;
 }
 
+body{
+  background: #f5f5f5;
+}
+
 :root {
   --text-primary: #4C4C4C;
   --text-secondary:#828282;
