--- a/src/Home.css
+++ b/src/Home.css
@@ -442,7 +442,18 @@ ul li a {
    .testimonials-left{
      gap: 2rem;
    }
+   .faq-left {
+      width: 80%;
+   }
+   .faq-right{
+     width: 80%;
+   }
    
+   .faq-left h2{
+     font-size: 2rem;
+     font-weight: 700;
+     line-height: 1.8;
+   }
    
 }
 
@@ -715,6 +726,25 @@ ul li a {
    
    .testimonials-right span {
       font-size: 1.8rem;
+   }
+   
+   .faq-left {
+      width: 100%;
+      padding: 0;
+   }
+   .faq-right{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 5rem;
+      border-radius: 0;
+      background: transparent;
+   }
+   .faq-right input{
+       width: 100%;
+       border-radius: 100px;
+       padding: 2rem;
+       font-size: 1rem;
    }
 
 }
